# ember

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
.github/workflows/: cmake.yml
src/: args.cpp  args.hpp  buffer.cpp  buffer.hpp  coff.cpp  coff.hpp  elf64.cpp  elf64.hpp  file.cpp  file.hpp  header.cpp  header.hpp  main.cpp  output.cpp  output.hpp  symbol.cpp  symbol.hpp  util.cpp  util.hpp
src/struct/: coff.hpp  elf64.hpp
test/affix/: CMakeLists.txt  main.c
test/constant/: CMakeLists.txt  data.txt  main.c
test/header/: CMakeLists.txt  main.c
test/limited/: CMakeLists.txt  main.c
test/mutable/: CMakeLists.txt  main.c
test/named/: CMakeLists.txt  main.c
test/simple/: CMakeLists.txt  main.c
